Remove CardBackground in favor of Row Block

--- a/src/blocks/image-card/styles/style.scss
+++ b/src/blocks/image-card/styles/style.scss
@@ -74,9 +74,9 @@
 		width: 100%;
 		word-break: break-word;
 
-		&:not(.has-background) {
-			background-color: #fff;
-		}
+		// &:not(.has-background) {
+		// 	background-color: #fff;
+		// }
 
 		p:last-of-type {
 			margin-bottom: 0;
