Remove unused style preview scss

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -1,8 +1,7 @@
 @import "../common";
 
-// Style Core Gutenberg Style Previews
+// Style icons
 @import "editor/icons";
-@import "editor/style-previews";
 
 // Style various inspector region and block toolbar controls
 @import "editor/is-transient";
