--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -59,6 +59,7 @@
 		}
 	}
 
+	// Fixes dropZone component z-index (#31).
 	.components-drop-zone {
 		z-index: 0;
 	}
@@ -85,5 +86,62 @@
 				}
 			}
 		}
+	}
+}
+
+// Style the core styles preview (#35).
+// As Gutenberg does not support innerBlocks content within the editor yet, we need
+// to style the previews to look better for now.
+.editor-block-preview,
+.editor-block-styles__item-preview {
+	.wp-block-coblocks-image-card__inner {
+		display: flex;
+		padding: 0;
+	}
+
+	.wp-block-coblocks-image-card__img-wrapper {
+		width: 120%;
+	}
+
+	.wp-block-coblocks-image-card__card-wrapper {
+		margin-bottom: 0;
+		margin-top: inherit;
+		width: 70%;
+	}
+
+	.wp-block-coblocks-image-card__intrinsic {
+		width: 53%;
+	}
+
+	.wp-block-coblocks-image-card__card {
+		background: #535c65;
+		display: block;
+		height: 50px;
+		width: 100%;
+	}
+
+	.wp-block-coblocks-image-card,
+	.wp-block-coblocks-image-card__inner,
+	.wp-block-coblocks-image-card__img-wrapper {
+		height: 100px;
+	}
+
+	.is-style-right .wp-block-coblocks-image-card__inner {
+		flex-direction: row-reverse;
+
+		.wp-block-coblocks-image-card__img-wrapper {
+			left: -20%;
+		}
+
+		.wp-block-coblocks-image-card__card {
+			margin-right: 0%;
+		}
+	}
+}
+
+.editor-block-preview {
+	.wp-block-coblocks-image-card__card {
+		height: 130px;
+		margin-top: 120px;
 	}
 }
