--- a/src/blocks/image-card/styles/style.scss
+++ b/src/blocks/image-card/styles/style.scss
@@ -2,114 +2,133 @@
 	position: relative;
 
 	&__inner {
-		position: relative;
-
-		@media (min-width: 700px) {
-			display: flex;
-		}
-	}
-
-	&__heading {
-		margin-bottom: 0;
-		margin-top: 0;
-	}
-
-	&__intrinsic {
-		max-width: initial;
-		overflow: visible;
-		position: relative;
-		width: 100%;
-
-		@media (min-width: 700px) {
-			width: 60%;
-		}
-
-		@media (min-width: 900px) {
-			width: 50%;
-		}
-	}
-
-	&__img-wrapper {
-		position: relative;
-
-		@media (min-width: 700px) {
-			width: 120%;
-		}
-
-		img {
-			height: auto;
-			position: static;
-			vertical-align: middle;
-			width: 100%;
-		}
-	}
-
-	&__card-wrapper {
 		align-items: center;
-		display: flex;
-		justify-content: flex-start;
-		margin-bottom: 1em;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: -25vw;
-		pointer-events: none;
+		display: grid;
+		grid-template-areas: "media-text-media media-text-content";
+		grid-template-columns: 50% auto;
+		grid-template-rows: auto;
 		position: relative;
-		width: 90%;
-		z-index: 29;
-
-		@media (min-width: 700px) {
-			margin-bottom: 0;
-			margin-top: inherit;
-			width: 70%;
-		}
-
-		@media (min-width: 900px) {
-			width: 50%;
-		}
 	}
 
-	&__card {
-		box-sizing: border-box;
-		pointer-events: auto;
-		width: 100%;
+	&.is-style-right &__inner {
+		grid-template-areas: "media-text-content media-text-media";
+		grid-template-columns: auto 50%;
+	}
+
+	&__media {
+		grid-area: media-text-media;
+		margin: 0;
+	}
+
+	&__content {
+		grid-area: media-text-content;
 		word-break: break-word;
+		margin-left: 20px;
+		margin-right: 20px;
 
 		p:last-of-type {
 			margin-bottom: 0;
 		}
 	}
 
-	&__button-wrapper {
-		display: inline-block;
-		margin-top: 10px;
+	div > figure > img,
+	div > figure > video {
+		max-width: unset;
+		vertical-align: middle;
+		width: 100%;
 	}
+
+	@media (max-width: #{ ($break-small) }) {
+		&.is-stacked-on-mobile {
+			grid-template-areas: "media-text-media" "media-text-content";
+			grid-template-columns: 100% !important;
+		}
+
+		&.is-stacked-on-mobile.is-style-right {
+			grid-template-areas: "media-text-content" "media-text-media";
+		}
+	}
+
+	// &__intrinsic {
+	// 	max-width: initial;
+	// 	overflow: visible;
+	// 	position: relative;
+	// 	width: 100%;
+
+	// 	@media (min-width: 700px) {
+	// 		width: 60%;
+	// 	}
+
+	// 	@media (min-width: 900px) {
+	// 		width: 50%;
+	// 	}
+	// }
+
+	// &__img-wrapper {
+	// 	position: relative;
+
+	// 	@media (min-width: 700px) {
+	// 		width: 120%;
+	// 	}
+
+	// 	img {
+	// 		height: auto;
+	// 		position: static;
+	// 		vertical-align: middle;
+	// 		width: 100%;
+	// 	}
+	// }
+
+	// &__card-wrapper {
+	// 	align-items: center;
+	// 	display: flex;
+	// 	justify-content: flex-start;
+	// 	margin-bottom: 1em;
+	// 	margin-left: auto;
+	// 	margin-right: auto;
+	// 	margin-top: -25vw;
+	// 	pointer-events: none;
+	// 	position: relative;
+	// 	width: 90%;
+	// 	z-index: 29;
+
+	// 	@media (min-width: 700px) {
+	// 		margin-bottom: 0;
+	// 		margin-top: inherit;
+	// 		width: 70%;
+	// 	}
+
+	// 	@media (min-width: 900px) {
+	// 		width: 50%;
+	// 	}
+	// }
 
 	// Right style option.
-	&.is-style-right &__inner {
-		flex-direction: row-reverse;
+	// &.is-style-right &__inner {
+	// 	flex-direction: row-reverse;
 
-		.wp-block-coblocks-image-card__img-wrapper {
-			@media (min-width: 700px) {
-				left: -20%;
-			}
-		}
+	// 	.wp-block-coblocks-image-card__img-wrapper {
+	// 		@media (min-width: 700px) {
+	// 			left: -20%;
+	// 		}
+	// 	}
 
-		.wp-block-coblocks-image-card__card {
-			margin-right: 0%;
-		}
-	}
+	// 	.wp-block-coblocks-image-card__content {
+	// 		margin-right: 0%;
+	// 	}
+	// }
 
-	// Card image placeholder, if there is no image added.
-	.has-no-image {
-		align-items: center;
-		background: hsla(240, 5%, 57%, 0.1);
-		display: flex;
-		height: 100vw;
-		justify-content: center;
-		max-height: 1024px;
-	}
+	// // Card image placeholder, if there is no image added.
+	// .has-no-image {
+	// 	align-items: center;
+	// 	background: hsla(240, 5%, 57%, 0.1);
+	// 	display: flex;
+	// 	height: 100vw;
+	// 	justify-content: center;
+	// 	max-height: 1024px;
+	// }
 
-	&.has-background-image .has-no-image {
-		background: #f4f5f6;
-	}
+	// &.has-background-image .has-no-image {
+	// 	background: #f4f5f6;
+	// }
 }
