--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -24,10 +24,10 @@
 	}
 
 	> .editor-inner-blocks > .editor-block-list__layout > .editor-block-list__block {
-		max-width: unset;
+		max-width: 100%;
 	}
 
-	.wp-block-coblocks-image-card__media-container {
+	.wp-block-coblocks-image-card__media {
 		height: 100%;
 		margin: 0;
 		width: 100%;
