--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -1,10 +1,14 @@
 .wp-block-coblocks-image-card {
-	&__inner {
-		grid-template-areas: "media-text-media media-text-content" "resizer resizer";
+	.editor-block-list__block[data-type="coblocks/image-card"] & &__inner {
+		grid-template-areas:
+			"media-text-media media-text-content"
+			"resizer resizer";
 	}
 
-	&.is-style-right &__inner {
-		grid-template-areas: "media-text-content media-text-media" "resizer resizer";
+	.editor-block-list__block[data-type="coblocks/image-card"] &.is-style-right &__inner {
+		grid-template-areas:
+			"media-text-content media-text-media"
+			"resizer resizer";
 	}
 
 	.__resizable_base__ {
@@ -27,7 +31,7 @@
 		max-width: 100%;
 	}
 
-	.wp-block-coblocks-image-card__media {
+	&__media-container {
 		height: 100%;
 		margin: 0;
 		width: 100%;
