--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -23,17 +23,46 @@
 		position: relative;
 		z-index: -1;
 
-		.has-no-image & {
+		.has-no-media & {
+			align-items: center;
 			background: rgba(139, 139, 150, 0.1); // Matches the .components-placeholder in core.
+			display: flex;
 			height: 70vw;
+			justify-content: center;
 			margin-bottom: 0;
 			margin-top: 0;
 			max-height: 600px;
+			width: 100%;
+
+			@include break-smallest {
+				width: 20%;
+			}
+
+			@include break-small {
+				width: 100%;
+			}
 		}
 
-		.has-no-image.alignfull &,
-		.has-no-image.alignwide & {
+		.has-no-media.alignfull &,
+		.has-no-media.alignwide & {
 			max-height: 700px;
+		}
+
+		svg {
+			height: 30px;
+			opacity: 0.15;
+			position: relative;
+			top: -30px;
+			width: 30px;
+
+			@include break-smallest {
+				top: 0;
+			}
+
+			@include break-small {
+				height: 50px;
+				width: 50px;
+			}
 		}
 	}
 
@@ -129,87 +158,4 @@
 			}
 		}
 	}
-
-	// &__intrinsic {
-	// 	max-width: initial;
-	// 	overflow: visible;
-	// 	position: relative;
-	// 	width: 100%;
-
-	// 	@media (min-width: 700px) {
-	// 		width: 60%;
-	// 	}
-
-	// 	@media (min-width: 900px) {
-	// 		width: 50%;
-	// 	}
-	// }
-
-	// &__img-wrapper {
-	// 	position: relative;
-
-	// 	@media (min-width: 700px) {
-	// 		width: 120%;
-	// 	}
-
-	// 	img {
-	// 		height: auto;
-	// 		position: static;
-	// 		vertical-align: middle;
-	// 		width: 100%;
-	// 	}
-	// }
-
-	// &__card-wrapper {
-	// 	align-items: center;
-	// 	display: flex;
-	// 	justify-content: flex-start;
-	// 	margin-bottom: 1em;
-	// 	margin-left: auto;
-	// 	margin-right: auto;
-	// 	margin-top: -25vw;
-	// 	pointer-events: none;
-	// 	position: relative;
-	// 	width: 90%;
-	// 	z-index: 29;
-
-	// 	@media (min-width: 700px) {
-	// 		margin-bottom: 0;
-	// 		margin-top: inherit;
-	// 		width: 70%;
-	// 	}
-
-	// 	@media (min-width: 900px) {
-	// 		width: 50%;
-	// 	}
-	// }
-
-	// Right style option.
-	// &.is-style-right &__inner {
-	// 	flex-direction: row-reverse;
-
-	// 	.wp-block-coblocks-media-card__img-wrapper {
-	// 		@media (min-width: 700px) {
-	// 			left: -20%;
-	// 		}
-	// 	}
-
-	// 	.wp-block-coblocks-media-card__content {
-	// 		margin-right: 0%;
-	// 	}
-	// }
-
-	// // Card image placeholder, if there is no image added.
-	// .has-no-image {
-	// 	align-items: center;
-	// 	background: hsla(240, 5%, 57%, 0.1);
-	// 	display: flex;
-	// 	height: 100vw;
-	// 	justify-content: center;
-	// 	max-height: 1024px;
-	// }
-
-	// &.has-background-image .has-no-image {
-	// 	background: #f4f5f6;
-	// }
 }
