Fix: Accordion item does not have the appropriate outline

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -1,6 +1,6 @@
 .wp-block[data-type="coblocks/accordion"] {
 	.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
-		outline: none;
+		// outline: none;
 	}
 
 	.wp-block[data-type="coblocks/accordion-item"] {
