--- a/src/blocks/accordion/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion/accordion-item/styles/editor.scss
@@ -21,9 +21,9 @@
 
 	.editor-block-list__layout .editor-block-list__block{
 		> .editor-block-list__block-edit::before, .editor-block-list__block-edit::before {
-			outline: none !important;
-			outline-style: none !important;
-			outline-width: 0px !important;
+			// outline: none !important;
+			// outline-style: none !important;
+			// outline-width: 0px !important;
 		}
 	}
 
