Fixes for https://github.com/thatplugincompany/coblocks/issues/47

--- a/src/styles/style/_stacked.scss
+++ b/src/styles/style/_stacked.scss
@@ -5,6 +5,10 @@ div {
 
 			> [class*="wp-block-coblocks-"] {
 				width: 100% !important;
+
+				&.wp-block-coblocks-column:last-child{
+					margin-bottom: 0px;
+				}
 			}
 		}
 	}
