Fixes for https://github.com/thatplugincompany/coblocks/issues/49

--- a/src/extensions/typography/styles/editor.scss
+++ b/src/extensions/typography/styles/editor.scss
@@ -39,11 +39,15 @@
 			font-family: inherit;
 		}
 	}
-	.wp-block-button {
-		.wp-block-button__link {
-			font-family: inherit;
+	
+	&:not([data-type="coblocks/pricing-table"]){
+		.wp-block-button {
+			.wp-block-button__link {
+				font-family: inherit;
+			}
 		}
 	}
+	
 	.editor-rich-text {
 		.wp-block-cover-text,
 		.wp-block-paragraph {
