Tweak color for iconography within the block inserter

--- a/src/common.scss
+++ b/src/common.scss
@@ -4,7 +4,7 @@
 $default-font: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen-sans, ubuntu, cantarell, "Helvetica Neue", sans-serif;
 
 // CoBlocks branding color.
-$coblocks: #536dff;
+$coblocks: #555eff;
 
 // Colors.
 $black: rgb(41, 41, 41);
