--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -183,62 +183,56 @@
 // Style the core styles preview (#35).
 // As Gutenberg does not support innerBlocks content within the editor yet, we need
 // to style the previews to look better for now.
-// .editor-block-preview,
-// .editor-block-styles__item-preview {
-// 	.wp-block-coblocks-media-card__inner {
-// 		display: flex;
-// 		padding: 0;
-// 	}
+.editor-block-preview,
+.editor-block-styles__item-preview {
+	.wp-block-coblocks-media-card__inner {
+		display: flex;
+		padding: 0;
+	}
 
-// 	.wp-block-coblocks-media-card__img-wrapper {
-// 		width: 120%;
-// 	}
+	.wp-block-coblocks-media-card__img-wrapper {
+		width: 120%;
+	}
 
-// 	.wp-block-coblocks-media-card__content-wrapper {
-// 		margin-bottom: 0;
-// 		margin-top: inherit;
-// 		width: 70%;
-// 	}
+	.wp-block-coblocks-media-card__content {
+		background: #535c65;
+		display: block;
+		height: 50px;
+		width: 100%;
+		margin-left: -15px;
+	}
 
-// 	.wp-block-coblocks-media-card__intrinsic {
-// 		width: 53%;
-// 	}
+	.wp-block-coblocks-media-card,
+	.wp-block-coblocks-media-card__inner,
+	.wp-block-coblocks-media-card__img-wrapper {
+		height: 100px;
+	}
 
-// 	.wp-block-coblocks-media-card__content {
-// 		background: #535c65;
-// 		display: block;
-// 		height: 50px;
-// 		width: 100%;
-// 	}
+	.is-style-right .wp-block-coblocks-media-card__inner {
+		flex-direction: row-reverse;
 
-// 	.wp-block-coblocks-media-card,
-// 	.wp-block-coblocks-media-card__inner,
-// 	.wp-block-coblocks-media-card__img-wrapper {
-// 		height: 100px;
-// 	}
+		.wp-block-coblocks-media-card__img-wrapper {
+			left: -20%;
+		}
 
-// 	.is-style-right .wp-block-coblocks-media-card__inner {
-// 		flex-direction: row-reverse;
+		.wp-block-coblocks-media-card__content {
+			margin-right: -15px;
+		}
+	}
+}
 
-// 		.wp-block-coblocks-media-card__img-wrapper {
-// 			left: -20%;
-// 		}
+.editor-block-preview {
+	.wp-block-coblocks-media-card__content {
+		height: 130px;
+		margin-top: 120px;
+	}
+	.editor-styles-wrapper{
+		overflow: hidden;
+	}
+}
 
-// 		.wp-block-coblocks-media-card__content {
-// 			margin-right: 0%;
-// 		}
-// 	}
-// }
-
-// .editor-block-preview {
-// 	.wp-block-coblocks-media-card__content {
-// 		height: 130px;
-// 		margin-top: 120px;
-// 	}
-// }
-
-// .wp-block-coblocks-media-card {
-// 	.editor-block-toolbar .components-toolbar:nth-child(2) {
-// 		display: none;
-// 	}
-// }
+.wp-block-coblocks-media-card {
+	.editor-block-toolbar .components-toolbar:nth-child(2) {
+		display: none;
+	}
+}
