--- a/src/styles/editor/_stacked.scss
+++ b/src/styles/editor/_stacked.scss
@@ -1,5 +1,5 @@
 div[class*="wp-block-coblocks-"] {
-	@media (max-width: 600px) {
+	@media (max-width: $break-small) {
 		&.is-stacked-on-mobile {
 			> .editor-inner-blocks{
 				> .editor-block-list__layout{
