--- a/src/blocks/shape-divider/styles/style.scss
+++ b/src/blocks/shape-divider/styles/style.scss
@@ -10,4 +10,13 @@
 	&.is-horizontally-flipped.is-vertically-flipped svg {
 		transform: scaleX(-1) scaleY(-1);
 	}
+
+	.divider--waves {
+		path:nth-child(1) {
+			opacity: 0.15;
+		}
+		path:nth-child(2) {
+			opacity: 0.3;
+		}
+	}
 }
