Font-family selections are being overwritten by the CoBlocks theme : https://github.com/thatplugincompany/coblocks/issues/48

--- a/src/extensions/typography/styles/editor.scss
+++ b/src/extensions/typography/styles/editor.scss
@@ -63,6 +63,12 @@
 			}
 		}
 	}
+	.wp-block-coblocks-pricing-table{
+		.wp-block-coblocks-pricing-table-item__title,
+		.wp-block-coblocks-pricing-table-item__amount{
+			font-family: inherit;
+		}
+	}
 }
 
 .editor-block-list__block[data-custom-fontweight="1"] {
