Fix: Adding an accordion item is difficult : https://github.com/thatplugincompany/coblocks/issues/26

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -42,4 +42,24 @@
 			border-color: $dark-gray-500;
 		}
 	}
+	.wp-block-coblocks-accordion{
+		> .editor-inner-blocks{
+			> .editor-block-list__layout{
+				.block-list-appender{
+					display: none;
+				}
+			}
+		}
+	}
+	&.is-selected{
+		.wp-block-coblocks-accordion{
+			> .editor-inner-blocks{
+				> .editor-block-list__layout{
+					.block-list-appender{
+						display: block;
+					}
+				}
+			}
+		}
+	}
 }
