--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -1,17 +1,19 @@
 .editor-block-list__block[data-no-top-margin="1"] {
-	margin-top: 0px !important;
-	[class*="wp-block-"]{
-		&.has-margin{
-			margin-top: 0px !important;
+	margin-top: 0 !important;
+
+	[class*="wp-block-"] {
+		&.has-margin {
+			margin-top: 0 !important;
 		}
 	}
 }
 
 .editor-block-list__block[data-no-bottom-margin="1"] {
-	margin-bottom: 0px !important;
-	[class*="wp-block-"]{
-		&.has-margin{
-			margin-bottom: 0px !important;
+	margin-bottom: 0 !important;
+
+	[class*="wp-block-"] {
+		&.has-margin {
+			margin-bottom: 0 !important;
 		}
 	}
 }
