Hide inserter if theres a data-no-bottom-margin and data-no-top-margin right after each other in the editor

--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -10,6 +10,12 @@
 	.editor-block-list__block-edit {
 		margin-top: 0 !important;
 	}
+
+	+ .editor-block-list__block[data-no-bottom-margin="1"] {
+		> .editor-block-list__insertion-point {
+			display: none;
+		}
+	}
 }
 
 .editor-block-list__block[data-no-bottom-margin="1"] {
