--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -1,6 +1,8 @@
 .editor-block-list__block[data-no-top-margin="1"] {
 	margin-top: 0 !important;
 
+	// Ensure that blocks with custom margin settings using our dimensions control
+	// are forced to display without margin.
 	[class*="wp-block-"] {
 		&.has-margin {
 			margin-top: 0 !important;
@@ -10,17 +12,13 @@
 	.editor-block-list__block-edit {
 		margin-top: 0 !important;
 	}
-
-	+ .editor-block-list__block[data-no-bottom-margin="1"] {
-		> .editor-block-list__insertion-point {
-			display: none;
-		}
-	}
 }
 
 .editor-block-list__block[data-no-bottom-margin="1"] {
 	margin-bottom: 0 !important;
 
+	// Ensure that blocks with custom margin settings using our dimensions control
+	// are forced to display without margin.
 	[class*="wp-block-"] {
 		&.has-margin {
 			margin-bottom: 0 !important;
@@ -30,4 +28,15 @@
 	.editor-block-list__block-edit {
 		margin-bottom: 0 !important;
 	}
+
+	// Hide the inserter on blocks that follow a vertically resizable block
+	// that does not have margin bottom applied.
+	&[data-type="coblocks/map"] {
+		+ .editor-block-list__block[data-no-bottom-margin="1"] {
+			> .editor-block-list__insertion-point {
+				display: none;
+			}
+		}
+	}
 }
+
