Ensure the first and last blocks don't apply margin improperly
If the first block removes it's margin top, it runs into the page title.

--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -1,4 +1,4 @@
-.editor-block-list__block[data-no-top-margin="1"] {
+.editor-block-list__block[data-no-top-margin="1"]:not(:first-child) {
 	margin-top: 0 !important;
 
 	// Ensure that blocks with custom margin settings using our dimensions control
@@ -14,7 +14,7 @@
 	}
 }
 
-.editor-block-list__block[data-no-bottom-margin="1"] {
+.editor-block-list__block[data-no-bottom-margin="1"]:not(:last-child) {
 	margin-bottom: 0 !important;
 
 	// Ensure that blocks with custom margin settings using our dimensions control
@@ -39,4 +39,3 @@
 		}
 	}
 }
-
