--- a/src/blocks/map/styles/editor.scss
+++ b/src/blocks/map/styles/editor.scss
@@ -32,6 +32,12 @@
 			width: 100%;
 		}
 	}
+
+	// Fix z-index, for when this block has margin bottom removed,
+	// and the next has margin-top removed.
+	&.is-selected .components-resizable-box__handle {
+		z-index: 30;
+	}
 }
 
 // Map styles.
@@ -46,10 +52,6 @@ $styles: (standard), (silver), (retro), (dark), (night), (aubergine);
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-size: cover !important;
-
-				// &:active {
-				// 	background-image: url(images/map/#{$style}.jpg) !important;
-				// }
 			}
 		}
 	}
