--- a/src/blocks/pricing-table/styles/style.scss
+++ b/src/blocks/pricing-table/styles/style.scss
@@ -1,7 +1,5 @@
 .wp-block-coblocks-pricing-table {
-
 	&.has-4-columns {
-
 		.wp-block-coblocks-pricing-table-item {
 			@media (min-width: 600px) and (max-width: 1100px) {
 				flex-basis: 40%;
@@ -12,11 +10,12 @@
 	&__inner {
 		@media (min-width: 600px) {
 			display: flex;
+			flex: 0 1 auto;
 			flex-direction: row;
 			flex-wrap: wrap;
-			flex: 0 1 auto;
-			position: relative;
+			height: 100%;
 			margin: -15px !important;
+			position: relative;
 		}
 	}
 }
